# neo-tel-me

./: .gitignore  LICENSE  README.md  __init__.py  action.py  aliyun_asr.py  audio_manager.py  call_message_storage.py  command.py  config.example.toml  config.py  history_manager.py  http_server.py  llm_client.py  llm_config.py  main.py  manifest.json  memory_manager.py  minimax_tts.py  plugin.py  prompt_refiner.py  pyproject.toml  requirements.txt  service.py  websocket_handler.py  websocket_server.py
alibabacloud-nls-python-sdk/nls/: core.py
web/: index.html
