[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "neo-tel-me"
version = "1.0.0"
description = "实时语音对话插件，支持阿里云ASR和MiniMax TTS"
authors = [
  { name = "MoFox Team", email = "team@mofox.dev" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">= 3.8, < 3.13"
dependencies = [
  "aiohttp>=3.9.0",
  "toml>=0.10.0",
  "websockets>=11.0.3"
]

[project.optional-dependencies]
local = [
  "pyaudio>=0.2.13"
]

[project.scripts]
neo-tel-me = "neo_tel_me.main:main"
